# ragsport

./: .gitignore  Cargo.toml  test-article.txt
bluffsport-cli/: Cargo.toml
bluffsport-cli/src/: main.rs
bluffsport-lib/: Cargo.toml
bluffsport-lib/src/: error.rs  lib.rs
bluffsport-lib/src/chunk/: fixed.rs  mod.rs  paragraph.rs
bluffsport-lib/src/embed/: bge.rs  mod.rs
bluffsport-lib/src/rerank/: bge.rs  mod.rs
bluffsport-lib/src/search/: mod.rs
bluffsport-lib/src/store/: memory.rs  mod.rs
eval/: article1.txt  article2.txt  llm_judge.py  queries-llm-judge.json  queries.json  sports_sample.txt  test-article.txt
