[package]
name = "bluffsport-cli"
description = "CLI for testing BluffSport RAG library"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "bluffsport"
path = "src/main.rs"

[dependencies]
bluffsport-lib.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
